A lot of changes involving new styles, new routing, more detail components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <bwm-header></bwm-header>
-<p>Hello world!</p>
-{{title}}
-<button (click)="clickHandler()">Click me?</button>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
+
