Branch name will be somewhat misleading here. Small changes with the detail component HTML being added, but a majority of this commit is related to backend node.js set up. Express will be used on this project with the database being a PostgreSQL db running off of pg-promise. A few DB examples are already functional in rentals.js where we return data from the rentals table

--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="rental">
+<div *ngIf="rental; else noRental">
     <p>rental-detail works! {{rental.id}}</p>
     <p>rental-detail works! {{rental.title}}</p>
     <p>rental-detail works! {{rental.city}}</p>
@@ -6,3 +6,6 @@
     <p>rental-detail works! {{rental.dailyRate}}</p>
     <p>rental-detail works! {{rental.street}}</p>
 </div>
+<ng-template #noRental> 
+    <p> rental listing not found</p>
+</ng-template>
