Connected front end to back end, front page now displays data pulled from database. Tons of package.json dependency updates, other misc chagnes

--- a/src/app/rental/rental-list-item/rental-list-item.component.html
+++ b/src/app/rental/rental-list-item/rental-list-item.component.html
@@ -1,10 +1,10 @@
-<a routerLink="/rentals/{{currentRental.id}}">
+<a routerLink="/rentals/{{currentRental.ID}}">
   <div class="card bwm-card">
     <img class="card-img-top" src={{currentRental.image}} alt="placeholderText">
     <div class="card-block">
       <h6 class="card-subtitle">Whole {{currentRental.category}} &#183; {{currentRental.city}}</h6>
       <h4 class="card-title">{{currentRental.title}}</h4>
-      <p class="card-text">${{currentRental.dailyRate}} per Night &#183; Free Cancelation</p>
+      <p class="card-text">${{currentRental.dailyRate}} per Night &#183; Free Cancellation</p>
     </div>
   </div>
 </a>
