--- a/src/app/rental/rental-list-item/rental-list-item.component.html
+++ b/src/app/rental/rental-list-item/rental-list-item.component.html
@@ -2,7 +2,7 @@
   <div class="card bwm-card">
     <img class="card-img-top" src={{currentRental.image}} alt="placeholderText">
     <div class="card-block">
-      <h6 class="card-subtitle">Whole {{currentRental.category}} &#183; {{currentRental.city}}</h6>
+      <h6 class="card-subtitle {{currentRental.category}}" >{{currentRental.shared ? 'Shared' : 'Whole'}} {{currentRental.category}} &#183; {{currentRental.city}}</h6>
       <h4 class="card-title">{{currentRental.title}}</h4>
       <p class="card-text">${{currentRental.dailyRate}} per Night &#183; Free Cancellation</p>
     </div>
