Cancelled google maps integration, but committing the changes anyways since we updated to new angular version

--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -5,7 +5,7 @@
           <img src="{{rental.image}}" alt="">
         </div>
         <div class="col-md-6">
-          <!-- Will be replaced with map !!!! -->
+          <p>Imagine that there is a google map integration here. Cancelled due to cost factor</p>
           <img src="{{rental.image}}" alt="">
         </div>
       </div>
